welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: illegal start of simple expression
 for (i<-1 to 3)def faireV() { for(i<-1 to 4) {avance(); baisseBrosse(); leveBrosse(); gauche(); 
                ^